fixed body width to 100%, prevent overflow-x on portfolio

--- a/src/views/layout/Layout.css
+++ b/src/views/layout/Layout.css
@@ -35,7 +35,9 @@
 .layout__body {
   align-self: center;
   flex: 1;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100vw;
 }
 
 .layout__footer {
